# Rust_Linked_List

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs  linked_list.rs
