[package]
name = "dgunther2001-linked_list"
version = "0.1.0"
authors =  ["Daniel Gunther <danielgunther2001@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A generic singly linked list"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
